Version 1.4.0, major backend dependencies upgrade